[package]
name = "maki"
version = "1.0.0"
edition = "2024"
authors = ["0mykull <michaelsousajr@gmail.com>"]
description = "A better touch and mkdir rolled up."
license = "MIT"
repository = "https://github.com/00mykull/maki"
readme = "README.md"
keywords = ["mkdir", "touch", "directory", "automation", "cli"]
categories = ["command-line-utilities"]
exclude = ["tests"]

[dependencies]

# [dev-dependencies]
# tempfile = "3.8.1"

[[bin]]
name = "maki"
path = "src/main.rs"
